# practica1_1_c

./: .ccls  CMakeLists.txt  Makefile  README.md
include/: parser.h  usage_client.h  usage_server.h
src/: parser.c  ping_noc.c  ping_noc_serv.c  ping_oc.c  ping_oc_serv.c  usage_client.c  usage_server.c
